Finish up everything

--- a/Project_1/verslag.html
+++ b/Project_1/verslag.html
@@ -38,9 +38,9 @@
         <b>Email adres:</b> <i>sabawoon.enayat@student.uantwerpen.be</i>
       </li>
       <li>
-        <b>Naam:</b> <i>Wajhudin Ibrahim</i><br />
-        <b>Studentennummer:</b> <i>20230459</i><br />
-        <b>Email adres:</b> <i>wajhudin.ibrahim@student.uantwerpen.be</i>
+        <b>Naam:</b> <i>Adam Boustta</i><br />
+        <b>Studentennummer:</b> <i>20231385</i><br />
+        <b>Email adres:</b> <i>adam.boustta@student.uantwerpen.be</i>
       </li>
     </ul>
     <b>Aantal man-uren besteed:</b> <i>6-7 uur</i><br />
