Make ALU tests work

--- a/Project_6/verslag.html
+++ b/Project_6/verslag.html
@@ -72,6 +72,9 @@
     </p>
     <ul>
       <li>
+        <a href="./ALU_Group05.circ">ALU_Group05.circ</a>: ALU, Group 05
+      </li>
+      <li>
         <a href="./SD_Group05.circ">SD_Group05.circ</a>: Full Datapath, Group 05
       </li>
     </ul>
